// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authorization - Policy directive on Object Error for query field with deny policy of object with allowed policy 1`] = `
{
  "errors": [
    {
      "message": "Access to Foo.baz is unauthorized by policy \\"alwaysDeny\\" in namespace \\"auth_object_directive\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "aod_foo",
        "baz"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Authorization - Policy directive on Object Error for query field without policy of object with deny policy 1`] = `
{
  "errors": [
    {
      "message": "Access to Foo2.bar2 is unauthorized by policy \\"alwaysDeny\\" in namespace \\"auth_object_directive\\"",
      "errorCode": "UNAUTHORIZED_BY_POLICY",
      "path": [
        "aod_foo2",
        "bar2"
      ]
    }
  ],
  "data": {}
}
`;

exports[`Authorization - Policy directive on Object OK for query field without policy of object with allowed policy 1`] = `
Object {
  "aod_foo": Object {
    "bar": "BAR",
  },
}
`;
